--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-slatetheme
+
+title: Octocat's homepage
+
+description: Bookmark this to keep an eye on my project updates!
